fixed overflow bug that makes tasks keep running down the page like crazy things

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
 	float: left;
 	height: 115px;
 	padding: 5px;
+	overflow: hidden;
 }
 
 .col .estimate {
